--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
     <script defer src="main.js"></script>
-    <title>SMASH</title>
+    <title>Разбей Кубиков</title>
 </head>
 <body>
     <!-- Game canvas -->
@@ -28,7 +28,7 @@
 <!-- Menu System -->
 <div class="menus">
 	<div class="menu menu--main">
-		<h1>SMASH <br>the<br> CubeS </h1>
+		<h1>РаЗБеЙ <br>КуБиКоВ</h1>
 		<button type="button" class="play-normal-btn">Играть</button>
 		<button type="button" class="play-casual-btn">Обычный режим</button>
 	</div>
@@ -46,8 +46,9 @@
 		<button type="button" class="menu-btn--score">Главное меню</button>
 	</div>
 	<div id="level-notification" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: rgba(0, 0, 0, 0.8); color: #fff; padding: 20px; border-radius: 10px; z-index: 100;">
-		<p id="level-text">Новый уровень!</p>
-	</div>	
+		<p id="level-text">Скорость увеличена!</p>
+	</div>
+	
 </div>
 </body>
 </html>
